syntax = "proto3";
package common;

message GameData {
  string room_id = 1;
  string rule_id = 2;
  string server_id = 3;
  string game_id = 4;
}

message SysError {
    string code = 1;
    string msg = 2;
    map<string, string> metadata = 3;
}